# DS-Project-Modelling

./: README.md  pyproject.toml
legacy/: highlight_utils.py
src/: Game 1 notebook.ipynb  Game 2 notebook.ipynb  create_highlights.ipynb  highlight_utils.py  temp_notebook copy.ipynb  temp_notebook.ipynb  ui.py
src/football_highlight_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
